--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@uiball/loaders": "^1.3.0",
     "framer-motion": "^10.16.4",
     "next": "13.5.4",
     "react": "^18",
