--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   },
   "dependencies": {
     "@uiball/loaders": "^1.3.0",
+    "firebase": "^10.5.0",
     "framer-motion": "^10.16.4",
     "next": "13.5.4",
+    "next-auth": "^4.23.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-modal": "^3.16.1",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@types/react": "18.2.28",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "typescript": "5.2.2"
   }
 }
