--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/react": "18.2.28",
     "autoprefixer": "^10.4.16",
+    "encoding": "^0.1.13",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
     "typescript": "5.2.2"
