--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@uiball/loaders": "^1.3.0",
+    "dotenv": "^16.3.1",
     "firebase": "^10.5.0",
     "framer-motion": "^10.16.4",
     "next": "13.5.4",
