--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.13",
     "@uiball/loaders": "^1.3.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.5.0",
