--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@nextui-org/react": "^2.1.13",
     "@uiball/loaders": "^1.3.0",
     "dotenv": "^16.3.1",
-    "firebase": "^10.5.0",
+    "firebase": "^10.8.1",
     "framer-motion": "^10.16.4",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
+    "protobufjs": "^7.2.6",
     "react": "^18",
     "react-dom": "^18",
     "react-modal": "^3.16.1",
